# wish

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  remote_test.sh  test_sliver.py
.claude/: settings.json  settings.local.json
.claude/commands/: brc.md  e2e.md  fixci.md  fixlint.md  fixtest.md  pr.md
.github/workflows/: deploy-log-analysis-api.yml  e2e-tests.yml  lint.yml  publish.yml  python.yml  test.yml  update-changelog.yml  update-graph-visualization.yml  wish-models-publish.yml  wish-models-test.yml
docs/: HTB-Lame-Sliver-Guide-Detailed.md  HTB-Lame-Sliver-QuickStart.md  design.md  hacktricks-implementation-summary.md  hacktricks-rag-flow.md  interactive-commands-handling.md  live-testing-setup.md  setup.md  sliver-setup-guide.md  usage-01-basic.md  usage-02-knowledge-loader.md  usage-03-C2.md  usage-04-langsmith.md  whitepaper.md
docs/sliver-c2-advanced/: implant-deployment-guide.md  usage-guide.md
e2e-tests/: README_LIVE.md  __init__.py  conftest.py  run_live_demo.sh  run_live_tests.sh
e2e-tests/component/: test_ai_integration.py  (+4 more)
wish-api/: Dockerfile.sam  Makefile  README.md  pyproject.toml  template.yaml
wish-api/scripts/: env_to_json.py  generate_requirements.py
wish-api/tests/: test_placeholder.py
wish-command-execution/: .clinerules  README.md  pyproject.toml
wish-command-generation/: .clinerules  .env.example  README.md  plan.md  pyproject.toml
wish-command-generation-api/: Makefile  README.md  pyproject.toml  template.yaml
wish-knowledge-loader/: .env.example  .env.test  README.md  pyproject.toml
wish-log-analysis/: .gitignore  README.md  a.py  pyproject.toml
wish-log-analysis-api/: Makefile  README.md  build-AnalyzeFunction  generate_requirements.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
wish-log-analysis/docs/: design.md
wish-log-analysis/scripts/: update_graph_visualization.py
wish-log-analysis/src/wish_log_analysis/: analyzer.py  app.py  graph.py  models.py  settings.py
wish-log-analysis/src/wish_log_analysis/nodes/: command_state_classifier.py  log_summarization.py  result_combiner.py
wish-log-analysis/src/wish_log_analysis/test_factories/: command_result.py  graph_state.py
wish-log-analysis/tests/: test_analyzer.py  test_app.py  test_command_state_classifier.py  test_graph.py  test_log_summarization.py  test_models.py  test_result_combiner.py
wish-models/: .clinerules  pyproject.toml
wish-sh/: .clinerules  .env.example  README.md  pyproject.toml
wish-sh/docs/: design.md
wish-sh/src/: wish_sh_tui.py
wish-sh/src/wish_sh/: __init__.py  logging.py  settings.py  shell_state_machine.py  shell_turns.py  system_info_display.py  wish.py  wish_cli.py  wish_manager.py  wish_paths.py  wish_tui.py
wish-sh/src/wish_sh/command_execution/: __init__.py  command_executor.py  command_status_tracker.py  interfaces.py
wish-sh/src/wish_sh/command_generation/: __init__.py  command_generator.py
wish-sh/src/wish_sh/test_factories/: __init__.py  command_execution_screen_factory.py  command_suggestion_factory.py  settings_factory.py  wish_input_factory.py  wish_manager_factory.py
wish-sh/src/wish_sh/tui/: __init__.py  app.py  modes.py  new_wish_messages.py  new_wish_turns.py  run.py  test_modal.py  utils.py  wish_tui.css
wish-sh/src/wish_sh/tui/screens/: __init__.py  log_viewer_screen.py  main_screen.py  quit_screen.py
wish-sh/src/wish_sh/tui/styles/: app.css
wish-sh/src/wish_sh/tui/widgets/: __init__.py  base_pane.py  help_pane.py  main_pane.py  new_wish_main_pane.py  new_wish_sub_pane.py  new_wish_widgets.py  pane_composite.py  shell_terminal_widget.py  sub_pane.py  ui_updater.py  wish_history_main_pane.py  wish_history_sub_pane.py  wish_select_pane.py
wish-sh/tests/: test_logging.py  test_settings.py  test_wish.py  test_wish_cli.py  test_wish_manager.py  test_wish_manager_commands.py  test_wish_manager_sleep.py  test_wish_paths.py
wish-sh/tests/command_execution/: __init__.py  test_command_executor.py  test_command_status_tracker.py  test_ui_updater.py
wish-sh/tests/tui/: test_integration_debug.py  test_modes.py  test_new_wish_turns.py  test_new_wish_turns_debug.py  test_utils.py
wish-sh/tests/tui/screens/: __init__.py  test_command_execution_screen.py  test_command_execution_screen_sleep.py  test_command_suggestion.py  test_log_viewer_screen.py  test_main_screen.py  test_quit_screen.py  test_wish_input.py
wish-sh/tests/tui/widgets/: __init__.py  test_base_pane.py  test_main_pane.py  test_new_wish_main_pane.py  test_new_wish_sub_pane.py  test_new_wish_sub_pane_debug.py  test_new_wish_widgets.py  test_pane_composite_debug.py  test_sub_pane.py  test_ui_updater.py  test_wish_history_main_pane.py  test_wish_history_sub_pane.py  test_wish_select_pane.py
wish-tools/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
(+208 files in other folders)
