[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/SecDev-Lab/wish"
Documentation = "https://github.com/SecDev-Lab/wish"
Repository = "https://github.com/SecDev-Lab/wish.git"
Issues = "https://github.com/SecDev-Lab/wish/issues"

[project]
name = "wish-log-analysis"
version = "0.0.0" # No need to update. GitHub Actions will update this on publish.
description = "Log analysis client for wish"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Security & Development Lab", email = "lay.sakura+secdevlab@gmail.com"}
]
maintainers = [
    {name = "Sho Nakatani", email = "lay.sakura@gmail.com"}
]
keywords = ["wish", "llm", "ai", "shell", "log-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]
license = {file = "../LICENSE"}
dependencies = [
    "wish-models>=0.0.1",
    "pydantic>=2.10.6",
    "requests>=2.31.0",
]

[tool.uv.sources]
wish-models = { path = "../wish-models", editable = true }

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.1",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
    "requests-mock>=1.11.0",
]

[tool.pdm.build]
includes = ["src/"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "W", # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "function"
